--- a/.github/workflows/life-tv.yml
+++ b/.github/workflows/life-tv.yml
@@ -19,24 +19,24 @@ jobs:
     - name: 直播源
       run: |       
         # gohkh0825
-        rm -f ./java/m3u/LIVE-TV.m3u8 && wget https://raw.githubusercontent.com/gohkh0825/LIVE-TV/main/LIVE-TV.m3u -O ./java/m3u/LIVE-TV.m3u8
-        sed -i '/#EXTM3U/d' ./java/m3u/LIVE-TV.m3u8
-        sed -i '/^\s*$/d' ./java/m3u/LIVE-TV.m3u8
+        rm -f ./m3u/LIVE-TV.m3u8 && wget https://raw.githubusercontent.com/gohkh0825/LIVE-TV/main/LIVE-TV.m3u -O ./m3u/LIVE-TV.m3u8
+        sed -i '/#EXTM3U/d' ./m3u/LIVE-TV.m3u8
+        sed -i '/^\s*$/d' ./m3u/LIVE-TV.m3u8
         
         # kiki4177
-        rm -f ./java/m3u/Kiki.m3u8 && wget https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki -O ./java/m3u/Kiki.m3u8
-        sed -i '/#EXTM3U/d' ./java/m3u/Kiki.m3u8
-        sed -i '/^\s*$/d' ./java/m3u/Kiki.m3u8
+        rm -f ./m3u/Kiki.m3u8 && wget https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki -O ./m3u/Kiki.m3u8
+        sed -i '/#EXTM3U/d' ./m3u/Kiki.m3u8
+        sed -i '/^\s*$/d' ./m3u/Kiki.m3u8
         
         # 159
-        rm -f ./java/m3u/159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159 -O ./java/m3u/159.m3u
-        sed -i '/#EXTM3U/d' ./java/m3u/159.m3u
-        sed -i '/^\s*$/d' ./java/m3u/159.m3u8
+        rm -f ./m3u/159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159 -O ./m3u/159.m3u
+        sed -i '/#EXTM3U/d' ./m3u/159.m3u
+        sed -i '/^\s*$/d' ./m3u/159.m3u8
         
         # 169
-        rm -f ./java/m3u/169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9 -O ./java/m3u/169.m3u
-        sed -i '/#EXTM3U/d' ./java/m3u/169.m3u8
-        sed -i '/^\s*$/d' ./java/m3u/169.m3u8
+        rm -f ./m3u/169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9 -O ./m3u/169.m3u
+        sed -i '/#EXTM3U/d' ./m3u/169.m3u8
+        sed -i '/^\s*$/d' ./m3u/169.m3u8
         
         
        
