--- a/.github/workflows/life-tv.yml
+++ b/.github/workflows/life-tv.yml
@@ -19,12 +19,12 @@ jobs:
     - name: 直播源
       run: |       
         # gohkh0825
-        rm -f ./m3u/LIVE-TV.m3u8 && wget https://raw.githubusercontent.com/gohkh0825/LIVE-TV/main/LIVE-TV.m3u -O ./m3u/LIVE-TV.m3u8
+        rm -f ./m3u/LIVE-TV.m3u && wget https://raw.githubusercontent.com/gohkh0825/LIVE-TV/main/LIVE-TV.m3u -O ./m3u/LIVE-TV.m3u
         sed -i '/#EXTM3U/d' ./m3u/LIVE-TV.m3u8
         sed -i '/^\s*$/d' ./m3u/LIVE-TV.m3u8
         
         # kiki4177
-        rm -f ./m3u/Kiki.m3u8 && wget https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki -O ./m3u/Kiki.m3u8
+        rm -f ./m3u/Kiki.m3u && wget https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki -O ./m3u/Kiki.m3u
         sed -i '/#EXTM3U/d' ./m3u/Kiki.m3u8
         sed -i '/^\s*$/d' ./m3u/Kiki.m3u8
         
