--- a/.github/workflows/life-tv.yml
+++ b/.github/workflows/life-tv.yml
@@ -26,7 +26,7 @@ jobs:
 
         
         # 159
-        rm -f ./m3u/159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159 -O ./m3u/159.m3u
+        rm -f ./m3u/159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159%E6%AC%A7%E5%8D%8E -O ./m3u/159.m3u
 
         
         # 169
