--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -19,8 +19,8 @@ jobs:
     - name: 整合源
       run: |         
           # 整合源
-           rm -f Master.m3u && touch MAster.m3u
-           cat ./m3u/Kiki.m3u >> MAster.m3u
+           rm -f Master.m3u && touch Master.m3u
+           cat ./m3u/Kiki.m3u >> Master.m3u
            cat ./m3u/LIVE-TV.m3u >> Master.m3u
          
        
