--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -21,7 +21,7 @@ jobs:
           # 整合源
            rm -f Master.m3u && touch Master.m3u
            cat ./LIVE-TV.m3u >> Master.m3u
-           cat ./m3u/Kiki.m3u >> Master.m3u
+           cat ./Kiki.m3u >> Master.m3u
            
     - name: 节目源
       run: |        
