--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -24,11 +24,11 @@ jobs:
 
         
         # 159
-        rm -f ./159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159%E6%AC%A7%E5%8D%8E -O ./159.m3u
+      # rm -f ./159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159%E6%AC%A7%E5%8D%8E -O ./159.m3u
 
         
         # 169
-        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9 -O ./169.m3u
+      #  rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9 -O ./169.m3u
 
 
     - name: 1直播源
