--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -22,7 +22,7 @@ jobs:
         # kiki4177
         rm -f ./Kiki.m3u && wget https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki -O ./Kiki.m3u
         # 159
-        rm -f ./159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159&t=1718864851&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b -O ./159.m3u
+        rm -f ./159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159&t=1718864851&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b
         #Star 2
         rm -f ./star2.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=%E6%98%9F%E8%A7%86%E7%95%8C2%E7%BA%BF&t=1718864499&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b -O ./star2.m3u
         # 169
