--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -24,11 +24,11 @@ jobs:
         # 159
         rm -f ./159.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=159&t=1718864851&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b
         #Star 2
-        rm -f ./star2.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=%E6%98%9F%E8%A7%86%E7%95%8C2%E7%BA%BF&t=1718864499&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b -O ./star2.m3u
+        rm -f ./star2.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=%E6%98%9F%E8%A7%86%E7%95%8C2%E7%BA%BF&t=1718864499&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b
         # 169
-        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9&t=1718864960&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b -O ./169.m3u
+        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=169%E7%84%A6%E7%82%B9&t=1718864960&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b
         # Oversea
-        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=%E9%83%BD%E6%98%AF%E5%9B%BD%E5%A4%96&t=1718865005&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b -O ./oversea.m3u
+        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?get=%E9%83%BD%E6%98%AF%E5%9B%BD%E5%A4%96&t=1718865005&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b
 
 
     - name: 1直播源
