--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -24,9 +24,9 @@ jobs:
         # 159
         rm -f ./159.m3u && wget "http://www.52sw.top:678/play/oj1381/list.php?get=159&t=1718864851&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b"
         #Star 2
-        rm -f ./star2.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?t=1718864499&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b&get=%E6%98%9F%E8%A7%86%E7%95%8C2%E7%BA%BF
+        # rm -f ./star2.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?t=1718864499&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b&get=%E6%98%9F%E8%A7%86%E7%95%8C2%E7%BA%BF
         # 169
-        rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?t=1718864960&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b&get=169%E7%84%A6%E7%82%B9
+        # rm -f ./169.m3u && wget http://www.52sw.top:678/play/oj1381/list.php?t=1718864960&uuid=8fde8f43-818b-4874-984e-6c163cf52b7b&get=169%E7%84%A6%E7%82%B9
         
 
     - name: 1直播源
