--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -115,6 +115,6 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add -A
-        git commit -a -m "${{ steps.date.outputs.date }}"
+        git commit -a -m "${{ steps.date.outputs.timestamp }}"
     - name: Push
       run: git push origin main
