--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -66,8 +66,7 @@ jobs:
       - name: Integrate with Master Playlist
         run: |
           rm -f Master.m3u && touch Master.m3u
-          cat ./Kiki.m3u >> Master.m3u
-          cat ./LIVE-TV.m3u >> Master.m3u 
+          cat ./LIVE-TV.m3u ./Kiki.m3u >> Master.m3u
 
       - name: Setup Python Environment
         uses: actions/setup-python@v4
