--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -83,5 +83,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
-          git commit -m "Auto update IPTV sources and EPG on ${{ steps.date.outputs.timestamp }}"
+          git commit -m " ${{ steps.date.outputs.timestamp }}"
           git push origin main
