--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -83,5 +83,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
-          git commit -m " Updated ${{ steps.date.outputs.timestamp }}"
+          git commit -a -m "${{ steps.date.outputs.date }}"
           git push origin main
