--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -20,8 +20,16 @@ jobs:
       - name: Download IPTV Sources
         run: |
           wget -O ./Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki
-          wget -O ./aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv
-          wget -O ./mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate
+          wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv
+          wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate
+          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u
+          wget -O ./m3u/p3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt
+          wget -O ./m3u/bestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt
+          wget -O ./m3u/iptv.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt
+          wget -O ./m3u/qttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt
+          wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt
+          wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt
+          wget -O ./m3u/52top.json https://raw.githubusercontent.com/letallthewind/live/main/52top.json
 
       - name: Download Live Sources
         run: |
@@ -44,15 +52,13 @@ jobs:
           # cn
           wget -O ./m3u/cqyx.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u
           wget -O ./m3u/sxg.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u
-          wget -O ./m3u/bestv.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/bestv.m3u
-          wget -O ./m3u/IPTV.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/IPTV.m3u
-          sed -i '/#EXTM3U/d' ./m3u/IPTV.m3u ./m3u/cqyx.m3u ./m3u/sxg.m3u ./m3u/bestv.m3u
-          # cat ./m3u/cqyx.m3u ./m3u/sxg.m3u ./m3u/bestv.m3u ./m3u/IPTV.m3u | tee ./m3u/iptv-org.m3u >/dev/null
+          sed -i '/#EXTM3U/d' ./m3u/cqyx.m3u ./m3u/sxg.m3u 
+          # cat ./m3u/cqyx.m3u ./m3u/sxg.m3u | tee ./m3u/iptv-org.m3u >/dev/null
           # sed -i '/^\s*$/d' ./m3u/iptv-org.m3u
 
       - name: Integrate Live Sources
         run: |
-          cat ./m3u/mewatchsg.m3u8 ./m3u/tw.m3u ./m3u/IPTV.m3u > LIVE-TV.m3u
+          cat ./m3u/mewatchsg.m3u8 ./m3u/tw.m3u > LIVE-TV.m3u
           sed -i '1i #EXTM3U x-tvg-url="https://live-tv.gohkh7.eu.org/EPG/EPG.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-1.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-2.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-3.xml"' LIVE-TV.m3u
 
       - name: Download Program Guide
@@ -60,7 +66,6 @@ jobs:
           wget -O ./EPG/EPG.xml https://cutt.ly/FreeviewMY-EPG-1
           wget -O ./EPG/EPG-1.xml https://cutt.ly/FreeviewMY-EPG-2
           wget -O ./EPG/EPG-2.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml
-          wget -O ./EPG/EPG-3.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml
           echo "Auto Update LIVE-TV in ${{ steps.date.outputs.timestamp }}" > README.md
 
       - name: Integrate with Master Playlist
