--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -19,7 +19,6 @@ jobs:
 
       - name: Download IPTV Sources
         run: |
-          wget -O ./Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki
           wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv
           wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate
           wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u
@@ -30,28 +29,29 @@ jobs:
           wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt
           wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt
           wget -O ./m3u/52top/52top.json https://raw.githubusercontent.com/letallthewind/live/main/52top.json
-          wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u
-          wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u
           wget -O ./m3u/52top/ysp.m3u http://xg.52sw.top:5000/ysp.m3u
           wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u
           wget -O ./m3u/52top/beesport.m3u http://xg.52sw.top:5000/beesport.m3u
           wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u
           wget -O ./m3u/52top/sxg.m3u http://xg.52sw.top:5000/sxg.m3u
+          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8
+          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8
+          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8
 
       - name: Download Live Sources
         run: |
-          # FreeviewMY
-          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8
-          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/FreeviewMY.m3u8
 
-          # mewatchsg
-          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8
-          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/mewatchsg.m3u8
-
-          # my
-          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8
-          sed -i '/#EXTM3U/d' ./m3u/my.m3u
-
+          wget -O ./Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u8
+          
+          wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u
+          sed -i '1i #EXTINF:-1 tvg-id="4GTV"  group-title="4GTV' ./m3u/52top/4gtv.m3u
+          
+          wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/tptv_proxy.m3u
+          sed -i '1i #EXTINF:-1 tvg-id="CHN"  group-title="CHN' ./m3u/52top/tptv_proxy.m3u
+          
           # tw
           wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u
           sed -i 's/#EXTINF:-1/#EXTINF:-1 group-title="TW"/g; /^\s*$/d' ./m3u/tw.m3u
@@ -65,20 +65,21 @@ jobs:
 
       - name: Integrate Live Sources
         run: |
-          cat ./m3u/mewatchsg.m3u8 ./m3u/tw.m3u > LIVE-TV.m3u
-          sed -i '1i #EXTM3U x-tvg-url="https://live-tv.gohkh7.eu.org/EPG/EPG.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-1.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-2.xml,https://live-tv.gohkh7.eu.org/EPG/EPG-3.xml"' LIVE-TV.m3u
+          cat ./m3u/Kiki.m3u8 ./m3u/52top/4gtv.m3u ./m3u/52top/tptv_proxy.m3u > Master.m3u
+          sed -i '1i #EXTM3U x-tvg-url="https://raw.githubusercontent.com/Tina-062006/java/main/EPG/EPG.xml"' Master.m3u
 
       - name: Download Program Guide
         run: |
-          wget -O ./EPG/EPG.xml https://cutt.ly/FreeviewMY-EPG-1
-          wget -O ./EPG/EPG-1.xml https://cutt.ly/FreeviewMY-EPG-2
-          wget -O ./EPG/EPG-2.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml
-          echo "Auto Update LIVE-TV in ${{ steps.date.outputs.timestamp }}" > README.md
+          wget -O ./EPG/My.xml https://cutt.ly/FreeviewMY-EPG-1
+          wget -O ./EPG/Astro.xml https://cutt.ly/FreeviewMY-EPG-2
+          wget -O ./EPG/SG.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml
+          wget -O ./EPG/CHN.xml https://assets.livednow.com/epg.xml
+          echo "Auto Update LIVE-TV in ${{ steps.date.outputs.date }}" > README.md
 
       - name: Integrate with Master Playlist
         run: |
           rm -f Master.m3u && touch Master.m3u
-          cat ./LIVE-TV.m3u ./Kiki.m3u >> Master.m3u
+          cat ./m3u/mewatchsg.m3u8 ./Kiki.m3u >> Master.m3u
 
       - name: Setup Python Environment
         uses: actions/setup-python@v4
@@ -89,6 +90,7 @@ jobs:
         run: |
           python ./.github/workflows/remove_content.py
           python ./.github/workflows/group.py
+          python ./.github/workflows/epg.py
 
       - name: Commit and Push Changes
         run: |
