--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -19,56 +19,56 @@ jobs:
 
       - name: Download IPTV Sources
         run: |
-          wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv
-          wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate
-          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u
-          wget -O ./m3u/p3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt
-          wget -O ./m3u/bestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt
-          wget -O ./m3u/iptv.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt
-          wget -O ./m3u/qttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt
-          wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt
-          wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt
-          wget -O ./m3u/52top/52top.json https://raw.githubusercontent.com/letallthewind/live/main/52top.json
-          wget -O ./m3u/52top/ysp.m3u http://xg.52sw.top:5000/ysp.m3u
-          wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u
-          wget -O ./m3u/52top/beesport.m3u http://xg.52sw.top:5000/beesport.m3u
-          wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u
-          wget -O ./m3u/52top/sxg.m3u http://xg.52sw.top:5000/sxg.m3u
-          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8
-          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8
-          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8
+          wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv || true
+          wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate || true
+          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
+          wget -O ./m3u/p3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
+          wget -O ./m3u/bestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
+          wget -O ./m3u/iptv.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
+          wget -O ./m3u/qttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
+          wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
+          wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
+          wget -O ./m3u/52top/52top.json https://raw.githubusercontent.com/letallthewind/live/main/52top.json || true
+          wget -O ./m3u/52top/ysp.m3u http://xg.52sw.top:5000/ysp.m3u || true
+          wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u || true
+          wget -O ./m3u/52top/beesport.m3u http://xg.52sw.top:5000/beesport.m3u || true
+          wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u || true
+          wget -O ./m3u/52top/sxg.m3u http://xg.52sw.top:5000/sxg.m3u || true
+          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
+          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
+          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
 
       - name: Download Live Sources
         run: |
 
-          wget -O ./Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki
+          wget -O ./Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u8
           
-          wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u
+          wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u
           sed -i '1i #EXTINF:-1 tvg-id="4GTV"  group-title="4GTV' ./m3u/52top/4gtv.m3u
           
-          wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u
+          wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/tptv_proxy.m3u
           sed -i '1i #EXTINF:-1 tvg-id="CHN"  group-title="CHN' ./m3u/52top/tptv_proxy.m3u
           
           # tw
-          wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u
+          wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u || true
           sed -i 's/#EXTINF:-1/#EXTINF:-1 group-title="TW"/g; /^\s*$/d' ./m3u/tw.m3u
 
           # cn
-          wget -O ./m3u/cqyx.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u
-          wget -O ./m3u/sxg.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u
+          wget -O ./m3u/cqyx.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u || true
+          wget -O ./m3u/sxg.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u || true
           sed -i '/#EXTM3U/d' ./m3u/cqyx.m3u ./m3u/sxg.m3u 
           # cat ./m3u/cqyx.m3u ./m3u/sxg.m3u | tee ./m3u/iptv-org.m3u >/dev/null
           # sed -i '/^\s*$/d' ./m3u/iptv-org.m3u
 
       - name: Download Program Guide
         run: |
-          wget -O ./EPG/My.xml https://cutt.ly/FreeviewMY-EPG-1
-          wget -O ./EPG/Astro.xml https://cutt.ly/FreeviewMY-EPG-2
-          wget -O ./EPG/SG.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml
-          wget -O ./EPG/CHN.xml https://assets.livednow.com/epg.xml
+          wget -O ./EPG/My.xml https://cutt.ly/FreeviewMY-EPG-1 || true
+          wget -O ./EPG/Astro.xml https://cutt.ly/FreeviewMY-EPG-2 || true
+          wget -O ./EPG/SG.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml || true
+          wget -O ./EPG/CHN.xml https://assets.livednow.com/epg.xml || true
           echo "EPG Auto Update in ${{ steps.date.outputs.date }}" > README.md
 
       - name: Setup Python Environment
