--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -75,6 +75,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+      
+      - name: Install Dependencies
+        run: pip install lxml
 
       - name: Run Python Scripts
         run: |
