--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -53,7 +53,7 @@ jobs:
 
           wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/mytvsuper.m3u
-          sed -i '1i #EXTINF:-1 tvg-id="CHN"  group-title="TVB, TVB' ./m3u/52top/mytvsuper.m3u
+          sed -i '1i #EXTINF:-1 tvg-id="TVB"  group-title="TVB, TVB' ./m3u/52top/mytvsuper.m3u
           
           # tw
           wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u || true
