--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -28,20 +28,22 @@ jobs:
           wget -O ./m3u/qttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
           wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
           wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
-          wget -O ./m3u/52top/52top.json https://raw.githubusercontent.com/letallthewind/live/main/52top.json || true
           wget -O ./m3u/52top/ysp.m3u http://xg.52sw.top:5000/ysp.m3u || true
           wget -O ./m3u/52top/beesport.m3u http://xg.52sw.top:5000/beesport.m3u || true
           wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u || true
           wget -O ./m3u/52top/sxg.m3u http://xg.52sw.top:5000/sxg.m3u || true
           wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
           wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
-          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
+          
 
       - name: Download Live Sources
         run: |
 
           wget -O ./m3u/Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u
+
+          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/mewatchsg.m3u8
           
           wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u
@@ -94,8 +96,8 @@ jobs:
       - name: Integrate Master Playlist
         run: |
           rm -f Master.m3u && touch Master.m3u
-          cat ./m3u/Kiki.m3u ./m3u/52top/itv_proxy.m3u ./m3u/52top/4gtv.m3u ./m3u/52top/mytvsuper.m3u >> Master.m3u
-          sed -i '1i #EXTM3U\n#EXTM3U x-tvg-url="https://raw.githubusercontent.com/Tina-062006/java/main/EPG/EPG.xml?"' Master.m3u
+          cat ./m3u/Kiki.m3u ./m3u/mewatchsg.m3u8 ./m3u/52top/itv_proxy.m3u ./m3u/52top/4gtv.m3u ./m3u/52top/mytvsuper.m3u >> Master.m3u
+          sed -i '1i #EXTM3U\n#EXTM3U x-tvg-url="https://raw.githubusercontent.com/Tina-062006/java/main/EPG/EPG.xml"' Master.m3u
 
       - name: Commit and Push Changes
         run: |
