--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -21,17 +21,18 @@ jobs:
         run: |
           wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv || true
           wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate || true
+          wget -O ./m3u/electriqube.m3u https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u || true
           wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
-          wget -O ./m3u/p3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
-          wget -O ./m3u/bestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
-          wget -O ./m3u/iptv.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
-          wget -O ./m3u/qttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
-          wget -O ./m3u/smart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
-          wget -O ./m3u/ubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
-          wget -O ./m3u/52top/ysp.m3u http://xg.52sw.top:5000/ysp.m3u || true
-          wget -O ./m3u/52top/beesport.m3u http://xg.52sw.top:5000/beesport.m3u || true
-          wget -O ./m3u/52top/tptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u || true
-          wget -O ./m3u/52top/sxg.m3u http://xg.52sw.top:5000/sxg.m3u || true
+          wget -O ./m3u/letalp3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
+          wget -O ./m3u/letalbestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
+          wget -O ./m3u/letallthewind.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
+          wget -O ./m3u/letalqttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
+          wget -O ./m3u/letalsmart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
+          wget -O ./m3u/letalubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
+          wget -O ./m3u/52top/52topysp.m3u http://xg.52sw.top:5000/ysp.m3u || true
+          wget -O ./m3u/52top/52topbeesport.m3u http://xg.52sw.top:5000/beesport.m3u || true
+          wget -O ./m3u/52top/52toptptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u || true
+          wget -O ./m3u/52top/52topsxg.m3u http://xg.52sw.top:5000/sxg.m3u || true
           wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
           wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
           wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
