--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -36,6 +36,7 @@ jobs:
           wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
           wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
           wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
+          wget -O ./m3u/MuZu.html https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html || true
 
       - name: Download Live Sources
         run: |
