--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -19,25 +19,34 @@ jobs:
 
       - name: Download IPTV Sources
         run: |
-          wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv || true
-          wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate || true
-          wget -O ./m3u/electriqube.m3u https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u || true
-          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
-          wget -O ./m3u/letalp3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
-          wget -O ./m3u/letalbestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
-          wget -O ./m3u/letallthewind.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
-          wget -O ./m3u/letalqttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
-          wget -O ./m3u/letalsmart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
-          wget -O ./m3u/letalubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
-          wget -O ./m3u/52top/52topysp.m3u http://xg.52sw.top:5000/ysp.m3u || true
-          wget -O ./m3u/52top/52topbeesport.m3u http://xg.52sw.top:5000/beesport.m3u || true
-          wget -O ./m3u/52top/52toptptv_proxy.m3u http://xg.52sw.top:5000/tptv_proxy.m3u || true
-          wget -O ./m3u/52top/52topsxg.m3u http://xg.52sw.top:5000/sxg.m3u || true
-          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
-          wget -O ./m3u/MuZu.html https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html || true
-          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
-          
-          wget -O ./m3u/fanmingming.m3u https://live.fanmingming.com/tv/m3u/ipv6.m3u || true
+          download_with_retries() {
+            local url=$1
+            local output=$2
+            for i in {1..5}; do
+              wget -O "$output" "$url" && break || echo "Retry $i for $url"
+              sleep 10
+            done
+          }
+
+          download_with_retries https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv ./m3u/aseanic.m3u || true
+          download_with_retries https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv ./m3u/aseanic.m3u || true
+          download_with_retries https://raw.githubusercontent.com/mystery75/streaming/app/tivimate ./m3u/mystery75.m3u || true
+          download_with_retries https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u ./m3u/electriqube.m3u || true
+          download_with_retries https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u ./m3u/xiaotan8.m3u || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt ./m3u/letalp3p.txt || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt ./m3u/letalbestv.txt || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt ./m3u/letallthewind.txt || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt ./m3u/letalqttv.txt || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/smart.txt ./m3u/letalsmart.txt || true
+          download_with_retries https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt ./m3u/letalubtv.txt || true
+          download_with_retries http://xg.52sw.top:5000/ysp.m3u ./m3u/52top/52topysp.m3u || true
+          download_with_retries http://xg.52sw.top:5000/beesport.m3u ./m3u/52top/52topbeesport.m3u || true
+          download_with_retries http://xg.52sw.top:5000/tptv_proxy.m3u ./m3u/52top/52toptptv_proxy.m3u || true
+          download_with_retries http://xg.52sw.top:5000/sxg.m3u ./m3u/52top/52topsxg.m3u || true
+          download_with_retries https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 ./m3u/my.m3u || true
+          download_with_retries https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html ./m3u/MuZu.html || true
+          download_with_retries https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 ./m3u/FreeviewMY.m3u8 || true
+          download_with_retries https://live.fanmingming.com/tv/m3u/ipv6.m3u ./m3u/fanmingming.m3u || true
 
       - name: Download Live Sources
         run: |
